<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_crb15000_support</name>
  <version>1.0.0</version>
  <description>ROS 2 support for ABB CRB15000</description>
  <maintainer email="robot@todo.com">Robot Engineer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>abb_resources</exec_depend># 必须添加的环境依赖
  <exec_depend>xacro</exec_depend># 必须添加的环境依赖
  <export><build_type>ament_cmake</build_type></export>
</package>
